tests/fail/no_main.rs
//@error-pattern: miri can only run programs that have a main function
#![no_main]
